package com.synxo.domain.enums;

public enum ProfileStateType {
	DEEP_SEARCH,
	LIGHT_TALK,
	GHOST_MODE
}
